[package]
name = "dwarrs"
version = "0.1.0"
authors = ["Louis C. Murguía <louiscmm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
tera = "1"
lazy_static = "1.4.0"
open = "1"
oxychem = { path = "../oxychem" }
